# health-tracking

./: .gitignore  README.md
backend/: Cargo.toml  backend.http
backend/api/: Cargo.toml
backend/api/src/: lib.rs
backend/api/src/data/: food_item_input.rs  mod.rs
backend/api/src/service/: repo.rs
backend/api/tests/: food_item_tests.rs
backend/api/tests/common/: mod.rs
backend/entity/: Cargo.toml
backend/entity/src/: food_item.rs  lib.rs  prelude.rs  weigh_in.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20251115_212844_initial_schema.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/components/: DataTable.tsx  FoodItems.tsx  testData.ts
frontend/src/models/: FoodItem.ts  dataTypes.ts
frontend/src/services/:  misc.ts  foodItemDataFetcher.ts  misc.ts
