[package]
name = "api"
version = "0.1.0"
authors = ["Adam Robinson <akrobinson74@gmail.com>"]
edition = "2024"
rust-version = "1.91.0"
publish = false

[dependencies]
actix-web = "4.11.0"
dotenvy = "0.15.7"
listenfd = "1.0.2"
entity = { path = "../entity" }
chrono = "0.4.42"
time = "0.3.44"
serde = { version = "1.0.228", features = ["derive"] }
env_logger = "0.11.8"

[dependencies.sea-orm]
version = "~2.0.0-rc.18" # sea-orm version
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "sqlx-sqlite",
]