[package]
name = "api"
version = "0.1.0"
authors = ["Adam Robinson <akrobinson74@gmail.com>"]
edition = "2024"
rust-version = "1.91.0"
publish = false

[dependencies]
actix-web = "4.11.0"
dotenvy = "0.15.7"
listenfd = "1.0.2"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
env_logger = "0.11.8"
actix-cors = "0.7.1"
entity = { path = "../entity" }
async-lazy = "0.1.2"

[dependencies.sea-orm]
version = "~2.0.0-rc.18" # sea-orm version
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "sqlx-sqlite",
]

[dev-dependencies]
futures = "0.3.31"
inventory = "0.3.21"
libtest-mimic = "0.8.1"
tokio = { version = "1.20.0", features = ["macros", "rt", "rt-multi-thread"] }
api = { path = ".", features = ["sqlite"] }

[features]
sqlite = ["sea-orm/sqlx-sqlite"]

#[[test]]
#name = "integration"
#harness = false